# Quick-Study

./: .gitignore  README.md
music_palyer/: CMakeLists.txt  framelesswindow.cpp  framelesswindow.h  main.cpp  main.qml
src/: CMakeLists.txt  MyComboBox.qml  MyComponent.qml  MyListView.qml  MyPopup.qml  MyRectAngle.qml  MyRectAngleP20.qml  main.cpp  main.qml  myqobject.cpp  myqobject.h  qml_study.qrc
src/P25-P31/QML_Layout/: main.cpp  main.qml
